--- a/測試問題.md
+++ b/測試問題.md
@@ -1,12 +1,24 @@
 有沒有男朋友啊？
-考試考了多少分啊？
+考試考得怎麼樣啊？
 現在一個月薪水多少錢？
+今年年終領多少呀？
 有交往對象了嗎？
-什麼時候要結婚啊？
+交往多久？
+感情好嗎？
+對方家世如何？
+有考慮進一步發展嗎？
+有考慮進一步發展嗎？
+怎麼沒交往對象？有在找嗎？
+要不要幫你介紹對象？
 買房買車了沒有？
 怎麼沒有帶男朋友回來？
 
+什麼時候生小孩？
+不生小孩老了怎麼辦？
 
 年輕人你這態度是怎麼回事？
 你怎麼這樣說話啊？
 現在的年輕人就是不懂事
+
+看到長輩怎麼不會叫人？
+記得我是誰嗎？
